<?php
namespace Mapbender\SearchBundle\Entity;

/**
 * Class Field
 *
 * @package Mapbender\SearchBundle\Entity
 */
class Field
{

}